# sphunter-x

./: README.md  README_en.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/async_safe/: log.h
app/src/main/cpp/collectors/: DRMCollector.cpp  DRMCollector.h  MacAddressCollector.cpp  MacAddressCollector.h  NativeFileCollector.cpp  NativeFileCollector.h  SystemPropertyCollector.cpp  SystemPropertyCollector.h
app/src/main/cpp/core/: FingerprintCollector.cpp  FingerprintCollector.h  JNIRegistry.cpp  JNIRegistry.h
app/src/main/cpp/cutils/: misc.h
app/src/main/cpp/netlink/: bionic_netlink.cpp  bionic_netlink.h  ifaddrs.cpp  ifaddrs.h
app/src/main/cpp/private/: ErrnoRestorer.h
app/src/main/cpp/utils/: Base64Utils.cpp  Base64Utils.h  ScopedFd.h  compat.h
app/src/main/java/com/sheep/sphunter/: FuckHideApi.java  MainActivity.java
app/src/main/java/com/sheep/sphunter/analyse/: HunterAnalysis.java  NativeHunterAnalysis.java
app/src/main/java/com/sheep/sphunter/fingerprint/: FingerprintDataCleaner.java  FingerprintService.java  NativeFileDataCleaner.java
app/src/main/java/com/sheep/sphunter/fingerprint/device/: AccountCollector.java  BluetoothCollector.java  BuildInfoCollector.java  FileInfoCollector.java  MediaCollector.java  MemoryCollector.java  PhoneInfoCollector.java  SensorCollector.java  (+4 more)
app/src/main/java/com/sheep/sphunter/model/: FingerprintResult.java
app/src/main/java/com/sheep/sphunter/util/: Constants.java
app/src/main/res/drawable/: ios_button_background.xml  ios_card_background.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
(+1 files in other folders)
